sets documentation link to docs.rs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Christian Krause <christian.krause@idiv.org>"]
 description = "spectrum scale tools"
 license = "GPL-3.0-or-later"
 readme = "README.md"
-documentation = "https://github.com/idiv-biodiversity/mmoxi"
+documentation = "https://docs.rs/mmoxi"
 homepage = "https://github.com/idiv-biodiversity/mmoxi"
 repository = "https://github.com/idiv-biodiversity/mmoxi"
 keywords = ["gpfs", "prometheus", "spectrum-scale"]
