[ci] updates push condition branch names

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -10,7 +10,8 @@ on:
       - '**.rs'
   push:
     branches:
-      - master
+      - main
+      - wip/next
     paths:
       - 'Cargo.toml'
       - 'Cargo.lock'
