--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ repository = "https://github.com/idiv-biodiversity/mmoxi"
 keywords = ["gpfs", "prometheus", "spectrum-scale"]
 categories = ["command-line-utilities", "filesystem"]
 edition = "2021"
+rust-version = "1.70"
 
 [dependencies]
 anyhow = "1"
